--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <section class="non-blur" style="backdrop-filter: blur(10px);">
                 <div>
                     <nav class="navbar" style="text-align: left;">
-                        <a class="navbar-brand" href="https://www.istenith.com/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTV0N7NaJBj2e4UlNhcKjt7cQY2KKz-VCPPBNgM9U8fqqCl9cDl1YU-vO8abxIBjaRm9I0&usqp=CAU" alt="" style="padding-left: 0.3rem;
+                        <a class="navbar-brand" href="https://www.istenith.com/"><img src="https://avatars.githubusercontent.com/u/46888662?s=280&v=4" alt="" style="padding-left: 0.3rem;
                             width: 8%;
                             margin: 1rem;
                             transition: 1s;
